<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        style="@style/FontTheme40InputNumbers"
        android:id="@+id/textViewInputNumbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewInputNumbers" />

    <LinearLayout
        android:id="@+id/layout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/textViewInputNumbers">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/letters1constraintlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/L"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/L"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/O"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/O"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintEnd_toEndOf="@id/L"
                app:layout_constraintStart_toEndOf="@id/L"
                app:layout_constraintTop_toTopOf="@id/L" />

            <TextView
                android:id="@+id/G"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/G"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintBaseline_toBaselineOf="@id/O"
                app:layout_constraintEnd_toEndOf="@id/O"
                app:layout_constraintStart_toEndOf="@id/O" />

            <TextView
                android:id="@+id/I"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/I"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintBaseline_toBaselineOf="@id/G"
                app:layout_constraintEnd_toEndOf="@id/G"
                app:layout_constraintStart_toEndOf="@id/G" />

            <TextView
                android:id="@+id/N"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/N"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintBaseline_toBaselineOf="@id/I"
                app:layout_constraintEnd_toEndOf="@id/I"
                app:layout_constraintStart_toEndOf="@id/I" />

            <TextView
                android:id="@+id/OO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/O"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintBaseline_toBaselineOf="@id/N"
                app:layout_constraintEnd_toEndOf="@id/N"
                app:layout_constraintStart_toEndOf="@id/N" />

            <TextView
                android:id="@+id/V"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/V"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintBaseline_toBaselineOf="@id/OO"
                app:layout_constraintEnd_toEndOf="@id/OO"
                app:layout_constraintStart_toEndOf="@id/OO" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/r0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/column0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/row0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBlack"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewButtonC"
                            style="@style/FontTheme40"
                            android:text="@string/textViewButtonC" />

                        <TextView
                            android:id="@+id/textViewButtonPlusMinus"
                            style="@style/FontTheme40"
                            android:text="@string/textViewButtonPlusMinus" />

                        <TextView
                            android:id="@+id/textViewButtonPercent"
                            style="@style/FontTheme40"
                            android:text="@string/textViewButtonPercent" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/row1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBlack"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewButton7"
                            style="@style/FontTheme40"
                            android:text="@string/textViewButton7" />

                        <TextView
                            android:id="@+id/textViewButton8"
                            style="@style/FontTheme40"
                            android:text="@string/textViewButton8" />

                        <TextView
                            android:id="@+id/textViewButton9"
                            style="@style/FontTheme40"
                            android:text="@string/textViewButton9" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/row2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBlack"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewButton4"
                            style="@style/FontTheme40"
                            android:text="@string/textViewButton4" />

                        <TextView
                            android:id="@+id/textViewButton5"
                            style="@style/FontTheme40"
                            android:text="@string/textViewButton5" />

                        <TextView
                            android:id="@+id/textViewButton6"
                            style="@style/FontTheme40"
                            android:text="@string/textViewButton6" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/row3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBlack"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewButton1"
                            style="@style/FontTheme40"
                            android:text="@string/textViewButton1" />

                        <TextView
                            android:id="@+id/textViewButton2"
                            style="@style/FontTheme40"
                            android:text="@string/textViewButton2" />

                        <TextView
                            android:id="@+id/textViewButton3"
                            style="@style/FontTheme40"
                            android:text="@string/textViewButton3" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/row4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBlack"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewButton0"
                            style="@style/FontTheme40"
                            android:layout_weight="1"
                            android:text="@string/textViewButton0" />

                        <TextView
                            android:id="@+id/textViewButtonDot"
                            style="@style/FontTheme40"
                            android:layout_weight="2"
                            android:text="@string/textViewButtonDot" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/column1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="3"
                    android:background="@color/colorBlack">

                    <TextView
                        style="@style/FontTheme40_Orange"
                        android:id="@+id/textViewButtonDivision"
                        android:text="@string/textViewButtonDivision" />
                    <TextView
                        style="@style/FontTheme40_Orange"
                        android:id="@+id/textViewButtonMulti"
                        android:text="@string/textViewButtonMulti" />
                    <TextView
                        style="@style/FontTheme40_Orange"
                        android:id="@+id/textViewButtonMinus"
                        android:text="@string/textViewButtonMinus" />
                    <TextView
                        style="@style/FontTheme40_Orange"
                        android:id="@+id/textViewButtonPlus"
                        android:text="@string/textViewButtonPlus" />
                    <TextView
                        style="@style/FontTheme40_Orange"
                        android:id="@+id/textViewButtonEqual"
                        android:text="@string/textViewButtonEqual" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </Layout>






</RelativeLayout>